# LADA

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  CODE_STYLES.md  README.md  electron-builder.json  electron.vite.config.ts  generator.mjs  index.html  package.json  tsconfig.base.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/: release-drafter-config.yml
.github/workflows/: main.yml  release-drafter.yml  release.yml
app/: app.ts  index.ts
app/modules/apis/: IPCServer.ts  index.ts
app/modules/deepLink/: index.ts
app/modules/developers/: index.ts
app/modules/general/: index.ts
app/modules/league/: index.ts  leagueAPIClient.ts
app/modules/ps/: index.ts
app/preload/: index.ts
app/stores/: config.ts  update.ts
app/types/: index.ts  preload.ts
app/utils/: IPCServer.ts  import.ts
public/: fonts.css
resources/locales/: en-US.json  en_US.json  ko-KR.json  ko_KR.json
rust/: Cargo.toml  build.rs
rust/src/: app.rs  auto_accept.rs  config.rs  lcu.rs  lib.rs  main.rs  startup.rs  tray.rs
src/: index.tsx
src/hooks/: useAPI.ts  useChampNames.ts  useDataDragonAsset.ts  useLeagueVersion.ts  useRuneData.ts  useSummonerSpells.ts  useUpdateContentModal.tsx
src/main/: env.d.ts  i18next.d.ts  index.ts
src/main/core/: constants.ts  (+1 more)
src/pages/: _app.tsx  index.tsx  team.tsx
src/preload/: a.ts  electron.d.ts  generated-ipc-invoke-context.ts  generated-ipc-on-context.ts  index.ts
src/renderer/: index.html
src/stores/: app.ts
src/styles/: init.ts  themes.ts
src/types/: lane.ts
src/utils/: champion.ts
(+399 files in other folders)
