[package]
name = "lol-auto-accpet"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
auto-launch = "0.6"
base64 = "0.22"
directories = "6"
futures-util = "0.3"
native-tls = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"
tao = "0.35"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tray-icon = "0.24"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
winresource = "0.1"
